[gd_scene load_steps=5 format=3 uid="uid://c25tfpjx5rkb4"]

[ext_resource type="Script" path="res://2_game_scene/shooting/scripts/goal_flag.gd" id="1_434au"]
[ext_resource type="Texture2D" uid="uid://c6vwjyhaechpx" path="res://3_asset/image/flag.png" id="2_4tnoh"]
[ext_resource type="AudioStream" uid="uid://dolpp8rx2wa3k" path="res://3_asset/sound/fanfare.ogg" id="3_0nmuy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5pab"]
size = Vector2(31.625, 31.625)

[node name="Goal_flag" type="Area2D"]
script = ExtResource("1_434au")

[node name="Flag" type="Sprite2D" parent="."]
position = Vector2(16, 16)
texture = ExtResource("2_4tnoh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_d5pab")

[node name="goal_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0nmuy")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="finished" from="goal_sound" to="." method="_on_goal_sound_finished"]
